fix: navbar z-index

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -11,6 +11,7 @@ nav {
   padding: 37px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
+  z-index: 2;
 }
 
 nav a {
